[gd_scene load_steps=5 format=3 uid="uid://d1n2jml5o4iw5"]

[ext_resource type="Script" path="res://Scripts/Towers/Goku.gd" id="1_hgo62"]
[ext_resource type="Texture2D" uid="uid://bjnn7poa16jyo" path="res://Images/Towers/goku.png" id="2_vb2km"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdj0y"]
size = Vector2(40, 39)

[sub_resource type="CircleShape2D" id="CircleShape2D_va7js"]
radius = 3.70579

[node name="Goku" type="StaticBody2D"]
script = ExtResource("1_hgo62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
shape = SubResource("RectangleShape2D_fdj0y")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(23, 0)

[node name="Tower" type="Area2D" parent="."]
scale = Vector2(4.68, 4.68)

[node name="Range" type="CollisionShape2D" parent="Tower"]
scale = Vector2(13.68, 13.68)
shape = SubResource("CircleShape2D_va7js")

[node name="BulletContainer" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_vb2km")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
